// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for NewRelic health source Test NewRelic healthSource container loads 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main tabWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_setup-sources_0"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="0"
          id="bp3-tab-title_setup-sources_0"
          role="tab"
          tabindex="0"
        >
          Tab1
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_setup-sources_0"
        class="bp3-tab-panel"
        id="bp3-tab-panel_setup-sources_0"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main formFullheight"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  metricPacks
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      cv.healthSource.connectors.AppDynamics.metricPackLabel
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="Performance-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="StyledProps--font StyledProps--main metricPack"
                          >
                            <label
                              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main"
                            >
                              <input
                                checked=""
                                name="Performance"
                                type="checkbox"
                              />
                              <span
                                class="bp3-control-indicator"
                              />
                              Performance
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  Application
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small"
                      >
                        cv.healthSource.connectors.NewRelic.applicationLabel
                      </p>
                      <div
                        class="bp3-popover-wrapper bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="selectContainer"
                            data-testid="applicationIdDropdown"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                                data-testid="newRelicApplicationValue"
                              >
                                107019083
                              </p>
                            </div>
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <div
                        class="StyledProps--font StyledProps--main"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="customMetricsTitle"
                >
                  <p
                    class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                  >
                    cv.healthSource.connectors.customMetrics
                  </p>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        aria-label="cv.healthSource.connectors.customMetricsTooltip"
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--margin-left-medium StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-plus StyledProps--main"
                          icon="plus"
                        >
                          <svg
                            data-icon="plus"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              plus
                            </desc>
                            <path
                              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          cv.monitoringSources.addMetric
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-huge StyledProps--padding-large"
              >
                <div
                  class="Accordion--accordion"
                >
                  <div
                    class="Accordion--panel"
                    data-open="true"
                    data-testid="MetricThresholdAdvanced-panel"
                  >
                    <div
                      class="Accordion--summary"
                      data-testid="MetricThresholdAdvanced-summary"
                    >
                      <div
                        class="Accordion--label"
                      >
                        cv.monitoringSources.appD.advancedOptional
                      </div>
                      <div
                        class="Accordion--chevron"
                      />
                    </div>
                    <div
                      class="bp3-collapse Accordion--collapse"
                      style="height: auto; overflow-y: visible; transition: none;"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(0); transition: none;"
                      >
                        <div
                          class="Accordion--details"
                          data-testid="MetricThresholdAdvanced-details"
                        >
                          <div
                            class="bp3-card bp3-elevation-0 Card--card metricThresholdContentCard"
                          >
                            <div
                              class="bp3-tabs Tabs--main Tabs--horizontal"
                            >
                              <div
                                class="bp3-tab-list"
                                role="tablist"
                              >
                                <div
                                  class="bp3-tab-indicator-wrapper"
                                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                                >
                                  <div
                                    class="bp3-tab-indicator"
                                  />
                                </div>
                                <div
                                  aria-controls="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                  aria-disabled="false"
                                  aria-expanded="true"
                                  aria-selected="true"
                                  class="bp3-tab"
                                  data-tab-id="cv.monitoringSources.appD.ignoreThresholds"
                                  id="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                  role="tab"
                                  tabindex="0"
                                >
                                  cv.monitoringSources.appD.ignoreThresholds (0)
                                </div>
                                <div
                                  aria-controls="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.failFastThresholds"
                                  aria-disabled="false"
                                  aria-expanded="false"
                                  aria-selected="false"
                                  class="bp3-tab"
                                  data-tab-id="cv.monitoringSources.appD.failFastThresholds"
                                  id="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.failFastThresholds"
                                  role="tab"
                                  tabindex="0"
                                >
                                  cv.monitoringSources.appD.failFastThresholds (0)
                                </div>
                              </div>
                              <div
                                aria-hidden="false"
                                aria-labelledby="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                class="bp3-tab-panel"
                                id="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                role="tabpanel"
                              >
                                <div
                                  class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                                  >
                                    cv.monitoringSources.appD.ignoreThresholdHint
                                  </p>
                                  <div
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    <div
                                      class="StyledProps--font StyledProps--main"
                                      style="min-height: 300px;"
                                    >
                                      <div
                                        class="StyledProps--font StyledProps--main metricThresholdContentIgnoreTableHeader"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.appD.metricType
                                        </p>
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.appD.groupTransaction
                                        </p>
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.metricLabel
                                        </p>
                                        <div
                                          class="Layout--horizontal StyledProps--main"
                                          style="justify-content: space-between; align-items: center;"
                                        >
                                          <p
                                            class="StyledProps--font StyledProps--main criteriaHeader"
                                          >
                                            cf.segmentDetail.criteria
                                          </p>
                                          <button
                                            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                                            data-testid="AddThresholdButton"
                                            style="justify-self: start;"
                                            type="button"
                                          >
                                            <span
                                              class="bp3-icon bp3-icon-plus StyledProps--main"
                                              icon="plus"
                                            >
                                              <svg
                                                data-icon="plus"
                                                height="16"
                                                viewBox="0 0 16 16"
                                                width="16"
                                              >
                                                <desc>
                                                  plus
                                                </desc>
                                                <path
                                                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                                  fill-rule="evenodd"
                                                />
                                              </svg>
                                            </span>
                                            <span
                                              class="bp3-button-text"
                                            >
                                              cv.monitoringSources.appD.addThreshold
                                            </span>
                                          </button>
                                        </div>
                                      </div>
                                      <div
                                        class="StyledProps--font StyledProps--main emptyThresholdsContainer"
                                        data-testid="emptyThresholdsDisplay"
                                      >
                                        <div
                                          class="StyledProps--font StyledProps--main NoDataCard--noDataCard noThresholdsMessageCard StyledProps--flex StyledProps--flex-align-center-center"
                                        >
                                          <div
                                            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                                            style="align-items: center; margin-top: -48px; width: 470px;"
                                          >
                                            <img
                                              src="test-file-stub"
                                            />
                                            <p
                                              class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                                            >
                                              cv.metricThresholds.noThresholdsMessage
                                            </p>
                                            <div
                                              class="NoDataCard--buttonContainer"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 120px;"
              />
              <div
                class="StyledProps--font StyledProps--main footerCta footer"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    submit
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for NewRelic health source Validation in create mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main tabWrapper"
  >
    <div
      class="bp3-tabs Tabs--main Tabs--horizontal"
    >
      <div
        class="bp3-tab-list"
        role="tablist"
      >
        <div
          class="bp3-tab-indicator-wrapper"
          style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
        >
          <div
            class="bp3-tab-indicator"
          />
        </div>
        <div
          aria-controls="bp3-tab-panel_setup-sources_0"
          aria-disabled="false"
          aria-expanded="true"
          aria-selected="true"
          class="bp3-tab"
          data-tab-id="0"
          id="bp3-tab-title_setup-sources_0"
          role="tab"
          tabindex="0"
        >
          Tab1
        </div>
      </div>
      <div
        aria-hidden="false"
        aria-labelledby="bp3-tab-title_setup-sources_0"
        class="bp3-tab-panel"
        id="bp3-tab-panel_setup-sources_0"
        role="tabpanel"
      >
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            action="#"
            class="FormikForm--main formFullheight"
          >
            <div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  metricPacks
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--vertical StyledProps--main"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      cv.healthSource.connectors.AppDynamics.metricPackLabel
                    </p>
                    <div
                      class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                    >
                      <div
                        class="bp3-form-group"
                        data-id="Performance-0"
                      >
                        <div
                          class="bp3-form-content"
                        >
                          <div
                            class="StyledProps--font StyledProps--main metricPack"
                          >
                            <label
                              class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox Checkbox--checked StyledProps--main"
                            >
                              <input
                                name="Performance"
                                type="checkbox"
                              />
                              <span
                                class="bp3-control-indicator"
                              />
                              Performance
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <p
                  class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                >
                  Application
                </p>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-large StyledProps--main horizontalCenterAlign"
                  >
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--margin-bottom-small StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    >
                      <p
                        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-bottom-small"
                      >
                        cv.healthSource.connectors.NewRelic.applicationLabel
                      </p>
                      <div
                        class="bp3-popover-wrapper bp3-fill"
                      >
                        <div
                          class="bp3-popover-target"
                        >
                          <div
                            class="selectContainer"
                            data-testid="applicationIdDropdown"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main"
                            >
                              <p
                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                                data-testid="newRelicApplicationValue"
                              >
                                cv.monitoringSources.newRelic.selectApplication
                              </p>
                            </div>
                            <span
                              class="bp3-icon bp3-icon-caret-down StyledProps--main"
                              icon="caret-down"
                            >
                              <svg
                                data-icon="caret-down"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  caret-down
                                </desc>
                                <path
                                  d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="FormError--errorDiv"
                        data-name="newRelicApplication"
                      >
                        <span
                          class="bp3-icon StyledProps--main FormError--errorTextIcon StyledProps--intent-danger"
                          data-icon="circle-cross"
                        >
                          <svg
                            height="12"
                            viewBox="0 0 13 13"
                            width="12"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M.167 6.501a6.333 6.333 0 1012.666 0 6.333 6.333 0 00-12.666 0zm4.071-3.003l2.26 2.263 2.264-2.263c.495-.495 1.236.248.741.743L7.24 6.504l2.254 2.258c.495.495-.247 1.238-.742.743L6.497 7.246 4.238 9.505c-.495.495-1.236-.249-.741-.744l2.258-2.258-2.259-2.262c-.494-.495.248-1.238.742-.743z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="FormError--error"
                        >
                          cv.healthSource.connectors.NewRelic.validations.application
                        </span>
                      </div>
                    </div>
                    <div
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                      style="width: 300px;"
                    />
                  </div>
                </div>
              </div>
              <div
                class="Layout--vertical StyledProps--main tooltipStyle StyledProps--margin-medium"
              >
                <div
                  class="Text--withDocsTooltip"
                  data-tooltip-id="customMetricsTitle"
                >
                  <p
                    class="StyledProps--font StyledProps--main header StyledProps--color StyledProps--color-black"
                  >
                    cv.healthSource.connectors.customMetrics
                  </p>
                </div>
                <div
                  class="bp3-card bp3-elevation-0 Card--card sectionCard shadow"
                >
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <button
                        aria-label="cv.healthSource.connectors.customMetricsTooltip"
                        class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--margin-left-medium StyledProps--intent-primary Button--with-current-color Button--without-shadow Button--withLeftIcon"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-plus StyledProps--main"
                          icon="plus"
                        >
                          <svg
                            data-icon="plus"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              plus
                            </desc>
                            <path
                              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                        <span
                          class="bp3-button-text"
                        >
                          cv.monitoringSources.addMetric
                        </span>
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--margin-bottom-huge StyledProps--padding-large"
              >
                <div
                  class="Accordion--accordion"
                >
                  <div
                    class="Accordion--panel"
                    data-open="true"
                    data-testid="MetricThresholdAdvanced-panel"
                  >
                    <div
                      class="Accordion--summary"
                      data-testid="MetricThresholdAdvanced-summary"
                    >
                      <div
                        class="Accordion--label"
                      >
                        cv.monitoringSources.appD.advancedOptional
                      </div>
                      <div
                        class="Accordion--chevron"
                      />
                    </div>
                    <div
                      class="bp3-collapse Accordion--collapse"
                      style="height: auto; overflow-y: visible; transition: none;"
                    >
                      <div
                        aria-hidden="false"
                        class="bp3-collapse-body"
                        style="transform: translateY(0); transition: none;"
                      >
                        <div
                          class="Accordion--details"
                          data-testid="MetricThresholdAdvanced-details"
                        >
                          <div
                            class="bp3-card bp3-elevation-0 Card--card metricThresholdContentCard"
                          >
                            <div
                              class="bp3-tabs Tabs--main Tabs--horizontal"
                            >
                              <div
                                class="bp3-tab-list"
                                role="tablist"
                              >
                                <div
                                  class="bp3-tab-indicator-wrapper"
                                  style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
                                >
                                  <div
                                    class="bp3-tab-indicator"
                                  />
                                </div>
                                <div
                                  aria-controls="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                  aria-disabled="false"
                                  aria-expanded="true"
                                  aria-selected="true"
                                  class="bp3-tab"
                                  data-tab-id="cv.monitoringSources.appD.ignoreThresholds"
                                  id="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                  role="tab"
                                  tabindex="0"
                                >
                                  cv.monitoringSources.appD.ignoreThresholds (0)
                                </div>
                                <div
                                  aria-controls="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.failFastThresholds"
                                  aria-disabled="false"
                                  aria-expanded="false"
                                  aria-selected="false"
                                  class="bp3-tab"
                                  data-tab-id="cv.monitoringSources.appD.failFastThresholds"
                                  id="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.failFastThresholds"
                                  role="tab"
                                  tabindex="0"
                                >
                                  cv.monitoringSources.appD.failFastThresholds (0)
                                </div>
                              </div>
                              <div
                                aria-hidden="false"
                                aria-labelledby="bp3-tab-title_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                class="bp3-tab-panel"
                                id="bp3-tab-panel_horizontalTabs_cv.monitoringSources.appD.ignoreThresholds"
                                role="tabpanel"
                              >
                                <div
                                  class="StyledProps--font StyledProps--main StyledProps--margin-top-large"
                                >
                                  <p
                                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                                  >
                                    cv.monitoringSources.appD.ignoreThresholdHint
                                  </p>
                                  <div
                                    class="StyledProps--font StyledProps--main"
                                  >
                                    <div
                                      class="StyledProps--font StyledProps--main"
                                      style="min-height: 300px;"
                                    >
                                      <div
                                        class="StyledProps--font StyledProps--main metricThresholdContentIgnoreTableHeader"
                                      >
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.appD.metricType
                                        </p>
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.appD.groupTransaction
                                        </p>
                                        <p
                                          class="StyledProps--font StyledProps--main"
                                        >
                                          cv.monitoringSources.metricLabel
                                        </p>
                                        <div
                                          class="Layout--horizontal StyledProps--main"
                                          style="justify-content: space-between; align-items: center;"
                                        >
                                          <p
                                            class="StyledProps--font StyledProps--main criteriaHeader"
                                          >
                                            cf.segmentDetail.criteria
                                          </p>
                                          <button
                                            class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--withLeftIcon Button--variation Button--variation-link"
                                            data-testid="AddThresholdButton"
                                            style="justify-self: start;"
                                            type="button"
                                          >
                                            <span
                                              class="bp3-icon bp3-icon-plus StyledProps--main"
                                              icon="plus"
                                            >
                                              <svg
                                                data-icon="plus"
                                                height="16"
                                                viewBox="0 0 16 16"
                                                width="16"
                                              >
                                                <desc>
                                                  plus
                                                </desc>
                                                <path
                                                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                                  fill-rule="evenodd"
                                                />
                                              </svg>
                                            </span>
                                            <span
                                              class="bp3-button-text"
                                            >
                                              cv.monitoringSources.appD.addThreshold
                                            </span>
                                          </button>
                                        </div>
                                      </div>
                                      <div
                                        class="StyledProps--font StyledProps--main emptyThresholdsContainer"
                                        data-testid="emptyThresholdsDisplay"
                                      >
                                        <div
                                          class="StyledProps--font StyledProps--main NoDataCard--noDataCard noThresholdsMessageCard StyledProps--flex StyledProps--flex-align-center-center"
                                        >
                                          <div
                                            class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                                            style="align-items: center; margin-top: -48px; width: 470px;"
                                          >
                                            <img
                                              src="test-file-stub"
                                            />
                                            <p
                                              class="StyledProps--font StyledProps--main NoDataCard--message StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
                                            >
                                              cv.metricThresholds.noThresholdsMessage
                                            </p>
                                            <div
                                              class="NoDataCard--buttonContainer"
                                            />
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main"
                style="margin-bottom: 120px;"
              />
              <div
                class="StyledProps--font StyledProps--main footerCta footer"
              >
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-left StyledProps--main"
                    icon="chevron-left"
                  >
                    <svg
                      data-icon="chevron-left"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-left
                      </desc>
                      <path
                        d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    previous
                  </span>
                </button>
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main nextButton StyledProps--intent-primary Button--with-current-color Button--withLeftIcon"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                    icon="chevron-right"
                  >
                    <svg
                      data-icon="chevron-right"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        chevron-right
                      </desc>
                      <path
                        d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    submit
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
